# Semanal

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: config.py  main.py
app/api/: clustering_runs.py  conversations.py  errors.py  health.py  jobs.py  topics.py
app/db/: models.py  session.py
app/schemas/: clustering_run.py  conversation.py  job.py  topic.py
app/services/: chunker.py  clusterer.py  embedder.py  emergence.py  ingest.py  ingest_pipeline.py  labeler.py  queue.py  raw_store.py  topic_assigner.py  topic_queries.py
app/workers/: arq_worker.py  job_tracker.py
docs/: REASONING.md  api.md  architecture.md  data-flow.md
scripts/: seed_multiwoz.py
sql/: init.sql
tests/: conftest.py  test_centroid_matching.py  test_chunker_helpers.py  test_emergence_formula.py  test_labeler_coercion.py  test_schemas.py
